Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -3,10 +3,10 @@
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6064064062:AAEP_x60aEpA6sEcX7ed2QWhC8QMiLNetnA"
+OWNER_ID = "1814487265"
+TELEGRAM_API = "16621564"
+TELEGRAM_HASH = "8b0bf7e5014d7a6862de76cf59e424b4"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
@@ -14,14 +14,14 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "15"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "60" 
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://az:az@cluster0.1bi12fs.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
 IS_TEAM_DRIVE = ""
 USE_SERVICE_ACCOUNTS = ""
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://adith.adithak.workers.dev/0:"                                        # Not end with /
 STATUS_LIMIT = "3"                                    # Recommended Value : 2 (If Using PICS)
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""
@@ -84,7 +84,7 @@ GD_INFO = ""
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = ""
+BASE_URL = "https://dndo.herokuapp.com"
 WEB_PINCODE = ""
 QB_SEED = ""
 
