--- a/config.env
+++ b/config.env
@@ -209,7 +209,7 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
 
 #MIRROR RELATED : (Commands)
 START_COMMAND = ""      #Default is "start"
-MIRROR_COMMAND = ""     #Default is "mirror"
+MIRROR_COMMAND = "mirrorx"     #Default is "mirror"
 ZIP_COMMAND = ""        #Default is "zipmirror"
 UNZIP_COMMAND = ""      #Default is "unzipmirror"
 CANCEL_COMMAND = ""     #Default is "cancel"
@@ -228,7 +228,7 @@ QBUNZIP_COMMAND = ""    #Default is "qbunzipmirror"
 BTSELECT_COMMAND = ""   #Deafault is "btsel"
 
 #LEECH RELATED : (Commands)
-LEECH_COMMAND = ""          #Default is "leech"
+LEECH_COMMAND = "leechm"          #Default is "leech"
 LEECHSET_COMMAND = ""       #Default is "leechset"
 SETTHUMB_COMMAND = ""       #Default is "setthumb"
 UNZIPLEECH_COMMAND = ""     #Default is "unzipleech"
