--- a/config.env
+++ b/config.env
@@ -84,7 +84,7 @@ GD_INFO = ""
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = "https://dndo.herokuapp.com"
+BASE_URL = "https://ahaana.herokuapp.com"
 WEB_PINCODE = ""
 QB_SEED = ""
 
